<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>berlin.yuna</groupId>
    <artifactId>tinkerforge-sensor</artifactId>
    <version>0.0.4</version>
    <packaging>jar</packaging>

    <name>${project.artifactId}</name>
    <description>This Library is simplifying the API usage in a pure Java 8 way without any Frameworks. Removes pain of the
        Sensor UID, how to speak to the sensor and what values can i get from it etc. so that the focus is more on the logic
    </description>
    <url>${git-project.url}</url>

    <developers>
        <developer>
            <name>Yuna Morgenstern</name>
            <email>io@yuna.berlin</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <java.version>12</java.version>
        <project.encoding>UTF-8</project.encoding>
        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
        <project.build.targetEncoding>${project.encoding}</project.build.targetEncoding>
        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
        <git-project.url>https://github.com/YunaBraska/tinkerforge-sensor</git-project.url>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.tinkerforge</groupId>
            <artifactId>tinkerforge</artifactId>
            <version>2.1.24</version>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-junit</artifactId>
            <version>2.0.0.0</version>
            <scope>test</scope>
        </dependency>

        <!-- CODE GENERATION -->
        <dependency>
            <groupId>com.squareup</groupId>
            <artifactId>javapoet</artifactId>
            <version>1.11.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.12.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- COMPILER -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerVersion>${java.version}</compilerVersion>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>berlin.yuna</groupId>-->
<!--                <artifactId>deployment-maven-plugin</artifactId>-->
<!--                <version>12.0.2</version>-->
<!--            </plugin>-->
        </plugins>
    </build>

    <scm>
        <connection>scm:git:${git-project.url}</connection>
        <developerConnection>scm:git:${git-project.url}</developerConnection>
        <url>${git-project.url}.git</url>
    </scm>
</project>